using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public enum E_Voice {
    First_1,
    Latter_1
}
