using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public enum E_QuestionState {
    FIRST,
    LATTER
}
